Update Publication link

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -320,7 +320,7 @@ I’m committed to constantly learning and collaborating with others to push the
         featuredLink:
           enable: true
           name: "View Publication"
-          url: "https://example.com"
+          url: "https://ijisae.org/index.php/IJISAE/article/view/6373"
 
   
   # Experience
