Update bold text

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -205,7 +205,7 @@ I’m committed to constantly learning and collaborating with others to push the
           - [Computer-Aided Diagnostic System for Diabetic Retinopathy Detection](https://ijisae.org/index.php/IJISAE/article/view/6373)
 
           Contributions
-            -  Served as a Research Assistant,  contributed to various research projects, further expanding my knowledge in AI and machine learning.
+            -  Served as a **Research Assistant**,  contributed to various research projects, further expanding my knowledge in AI and machine learning.
         featuredLink:
           enable: false
           name: "My academic degree"
@@ -218,23 +218,23 @@ I’m committed to constantly learning and collaborating with others to push the
     # title: "Custom Name"
     items:
       - title: Programming Languages
-        content: Proficient in **Java, Python, HTML/CSS, MATLAB,** and **JavaScript.** Experienced in solving 500+ DSA problems, building scalable applications, and developing machine learning models. 
+        content: Proficient in Java, Python, HTML/CSS, MATLAB, and JavaScript. Experienced in solving 500+ DSA problems, building scalable applications, and developing machine learning models. 
         # url: https://example.com
         # image: /images/achievment.jpg
       - title: ML Libraries
-        content: Proficient in **Pandas, NumPy, and Sci-kit Learn** for data analysis, and **TensorFlow, PyTorch,** and **Keras** for deep learning. Experienced in visualizations with **Matplotlib, Plotly,** and **D3.js,** and image processing with **OpenCV.**
+        content: Proficient in Pandas, NumPy, and Sci-kit Learn for data analysis, and TensorFlow, PyTorch, and Keras for deep learning. Experienced in visualizations with Matplotlib, Plotly, and D3.js, and image processing with OpenCV.
         # image: /images/achievment.jpg
       - title: Technical Expertise
-        content: Skilled in data analysis and visualization using tools like **Pandas** and **Matplotlib,** with experience in data engineering and machine learning/AI. Proficient in web/API development and database management, building efficient systems and applications.
+        content: Skilled in data analysis and visualization using tools like Pandas and Matplotlib, with experience in data engineering and machine learning/AI. Proficient in web/API development and database management, building efficient systems and applications.
         # url: ""
         # image: /images/achievment.jpg
       - title: Web Frameworks
-        content: Proficient in **Node.js, Express.js,** and **React** for building scalable web applications, with experience in **Flask** and **Django** for back-end development. Skilled in Next.js for server-side rendering and optimized React applications.
+        content: Proficient in Node.js, Express.js, and React for building scalable web applications, with experience in Flask and Django for back-end development. Skilled in Next.js for server-side rendering and optimized React applications.
       - title: Database Systems
-        content: Proficient in **SQL** for relational databases and **MongoDB** for NoSQL solutions. Experienced with **Apache Spark** for large-scale data processing and distributed computing.
+        content: Proficient in SQL for relational databases and MongoDB for NoSQL solutions. Experienced with Apache Spark for large-scale data processing and distributed computing.
         # url: https://example.com
       - title: Development Tools
-        content: Experienced with **Git/GitHub** for version control, and IDEs like **VS Code, PyCharm, IntelliJ,** and **Eclipse** for coding. Proficient in **Postman** for API testing, and skilled in **Power BI, Tableau,** and **Excel** for data analysis and visualization.
+        content: Experienced with Git/GitHub for version control, and IDEs like VS Code, PyCharm, IntelliJ, and Eclipse for coding. Proficient in Postman for API testing, and skilled in Power BI, Tableau, and Excel for data analysis and visualization.
         # url: https://example.com
 
   # projects
@@ -245,9 +245,9 @@ I’m committed to constantly learning and collaborating with others to push the
       - title: Nano-GPT
         content: "Built a simplified GPT model using PyTorch, leveraging principles from the **“Attention is All You Need”** paper by Google Research.
         
-        Designed and trained **10M** parameter 6-layer transformer with 6 heads per layer, 384 feature channels and context size of 256 characters.
+        Designed and trained 10M parameter 6-layer transformer with 6 heads per layer, 384 feature channels and context size of 256 characters.
         
-        Achieved validation loss of **1.46**, showcasing expertise in training and optimizing transformer architectures for language generation tasks." 
+        Achieved validation loss of 1.46, showcasing expertise in training and optimizing transformer architectures for language generation tasks." 
         # image: /images/projects/profile.png
         badges:
           - "NLP"
@@ -258,7 +258,7 @@ I’m committed to constantly learning and collaborating with others to push the
             url: https://github.com/bellaryyash23/nanoGPT
        
       - title: Prisoner's Dilemma Game Theory Visualization 
-        content: "Built an interactive storytelling visualization using **D3.js** and **Scrollama.js** to explore strategic decision-making in game theory.
+        content: "Built an interactive storytelling visualization using D3.js and Scrollama.js to explore strategic decision-making in game theory.
         
         Analyzed a 100-round iterative game dataset, linking player strategies to key psychological and theoretical insights." 
         # image: /images/projects/converter.jpg
@@ -276,8 +276,8 @@ I’m committed to constantly learning and collaborating with others to push the
 
       - title: Blog Website
         content: |
-            Created a full-stack blog website with **React** and **Next.js** enabling the admin to manage blog posts and users to interact through comments.
-            Applied **HTML, CSS, React** for UI; **Node.js** for package management, **SQL** for managing the posts database.
+            Created a full-stack blog website with React and Next.js enabling the admin to manage blog posts and users to interact through comments.
+            Applied HTML, CSS, React for UI; Node.js for package management, SQL for managing the posts database.
 
         badges:
           - "Full-Stack Web Development"
