Update degree info

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -195,7 +195,7 @@ I’m committed to constantly learning and collaborating with others to push the
 
       - title: "Bachelor of Technology in Electronics and Telecommunication Engineering"
         school:
-          name: "Savitribai Phule Pune University (pervious know as Pune University)"
+          name: "Savitribai Phule Pune University (previously known as Pune University)"
           url: "http://www.unipune.ac.in/"
         date: "2020 - 2024"
         GPA: "3.65 out of 4.0"
